Update pxt.json, Lesson5/5.1.1/5.1.1.md, Lesson6/6.2/6.2.1.md, Lesson6/6.2/6.2.2.md, Lesson6/6.2/6.2.md, Lesson6/6.3.1/6.3.1.md, Lesson6/6.3.2/6.3.2.md, Lesson6/6.3/6.3.md, Lesson6/6.4.2/6.4.2.md

--- a/Lesson6/6.2/6.2.1.md
+++ b/Lesson6/6.2/6.2.1.md
@@ -54,8 +54,8 @@ Run the code again and you should see it performs as expected.
 Once complete move onto the next Activity.
 
 #### ~ tutorialhint
-```python
-def travelled_walk():
-    blocks.place(GOLD_BLOCK, pos(0, -1, 0))
-player.on_travelled(WALK, travelled_walk)
+```spy
+player.onTravelled(WALK, function () {
+    blocks.place(GOLD_BLOCK, pos(0,-1,0))
+})
 ```
