--- a/Lesson6/6.2/6.2.2.md
+++ b/Lesson6/6.2/6.2.2.md
@@ -51,13 +51,14 @@ To fix change the boolean false value to true so that the logic is that the loop
 Change the boolean condition in the while loop from False to True and run the code and observe what happens and once complete move onto the Assessment Challenge!
 
 #### ~ tutorialhint
-```python
-def on_chat():
-    agent.teleport_to_player()
-    while agent.detect(AgentDetection.BLOCK, FORWARD) == True:
+```spy
+player.onChat("mine", function () {
+    agent.teleportToPlayer()
+    while(agent.detect(AgentDetection.Block, FORWARD) == true) {
         agent.destroy(FORWARD)
-        agent.collect_all()
+        agent.collectAll()
         agent.move(FORWARD, 1)
-player.on_chat("mine", on_chat)
+    }
+})
 ```
 
