--- a/Lesson6/6.2/6.2.md
+++ b/Lesson6/6.2/6.2.md
@@ -32,14 +32,15 @@ Take for example if we want to have the agent build a wall of blocks in length y
 The code has been provided below, run the code and observe what happens and return to Code Builder (remember to give your Agent some inventory!).
 
 Return to the tutorial by pressing the C key on your keyboard or tapping the Agent icon on your screen when finished.
-```python
-def on_chat():
-    agent.teleport_to_player()
+```spy
+player.onChat("buildWall", function () {
+    agent.teleportToPlayer()
     agent.move(FORWARD, 2)
-    for index in range(5):
+    for (let index = 0; index <= 4; index++) {
         agent.move(FORWARD, 1)
         agent.place(BACK)
-player.on_chat("buildWall", on_chat)
+    }
+})
 ```
 
 ```template
@@ -96,13 +97,14 @@ Run the code again and you should see it performs as expected.
 Once complete move onto the next Activity.
 
 #### ~ tutorialhint
-```python
-def on_chat():
-    agent.teleport_to_player()
+```spy
+player.onChat("buildWall", function () {
+    agent.teleportToPlayer()
     agent.move(FORWARD, 2)
-    for index in range(4):
+    for (let index = 0; index <= 3; index++) {
         agent.move(FORWARD, 1)
         agent.place(BACK)
-player.on_chat("buildWall", on_chat)
+    }
+})
 ```
 
