--- a/Lesson6/6.3/6.3.md
+++ b/Lesson6/6.3/6.3.md
@@ -49,7 +49,7 @@ Each line of code within the event handler would run as before, one after the ot
 
 When the below line is reached
 
-```python 
+``` 
 doSomething()
 ```
 
@@ -57,7 +57,7 @@ This line of code is calling a Python function - a function which we have named 
 
 In the below example this means that if we look at the 3rd time we call doSomething the 3 lines of code in the doSomething function will run then the following line of code will run:
 
-```python 
+``` 
 mobs.spawn(COW, agent.getPosition())
 ```
 
@@ -80,7 +80,7 @@ All of the code which will run when we call the function is under this line and 
 **Functions**
 
 To call a function you just need to use the function name followed by brackets.
-```python 
+``` 
 do_Something()
 ```
 
@@ -101,13 +101,13 @@ Its good practice to add comments to your code to describe what the code is doin
 There are 2 types of comments in Python - single line and multi line. 
 
 Single line comments are for adding in a single line of text comment and can be added at any point in your code by starting a line of code with 2 forward slashes (```python # ```) 
-```python 
+``` 
 # This is a single line comment!
 ```
 
-Multi line comments are for adding comments which require more than a single line. Multi line comments start and end with ```python  """ ```.
+Multi line comments are for adding comments which require more than a single line. Multi line comments start and end with `  """ `.
 
-```python 
+``` 
 """ This is a 
 multi line comment
 which allows for text comments 
