--- a/Lesson6/6.4.2/6.4.2.md
+++ b/Lesson6/6.4.2/6.4.2.md
@@ -31,18 +31,20 @@ To submit your answer please complete the student worksheet linked to by the Non
 Click next to modify the code.
 
 **Python**
-```python 
-def on_chat():
-    agent.teleport_to_player()
+```spy 
+player.onChat("house", function () {
+    agent.teleportToPlayer()
     agent.move(FORWARD, 1)
-    agent.set_assist(PLACE_ON_MOVE, False)
-    agent.set_assist(DESTROY_OBSTACLES, True)
-    for i in range(6):
-        for j in range(4):
+    agent.setAssist(PLACE_ON_MOVE, false)
+    agent.setAssist(DESTROY_OBSTACLES, true)
+    for(let i = 0; i < 6; i++) {
+        for(let i = 0; i < 4; i++) {
             agent.move(FORWARD, 4)
             agent.turn(LEFT_TURN)
+        }
         agent.move(UP, 2)
-player.on_chat("house", on_chat)
+    }
+})
 ```
 
 ## Step 3 
