--- a/Lesson5/5.1.1/5.1.1.md
+++ b/Lesson5/5.1.1/5.1.1.md
@@ -15,22 +15,23 @@ If there is any code in the code editor delete it and continue to the next step.
 ## Step 3 
 From the ``||PLAYER: PLAYER||`` drawer drag out a ``||PLAYER: run code on player method||`` block and drop it onto the code editor to create an event handler which will run when the player walks.
 #### ~ tutorialhint
-```python
-def travelled_walk():
-    pass
-player.on_travelled(WALK, travelled_walk)
+```spy
+player.onTravelled(WALK, function () {
+    
+})
 ```
 
 ## Step 4 
 From the ``||LOGIC: LOGIC||`` drawer place a ``||LOGIC: if else||`` block on line 2 inside the event handler to create and IF THEN ELSE statement.
 #### ~ tutorialhint
-```python
-def travelled_walk():
-    if True:
-        pass
-    else:
-        pass
-player.on_travelled(WALK, travelled_walk)
+```spy
+player.onTravelled(WALK, function () {
+    if (true) {
+
+    } else {
+
+    }
+})
 ```
 
 ## Step 5
@@ -41,18 +42,19 @@ From the ``||BLOCKS: BLOCKS||`` drawer place a ``||BLOCKS: test for block at pos
 
 This function will check for a certain type of block (a grass block by default) at a coordinate position and returns true if the blocks exists at that position or false if the block does not exist at the position.
 #### ~ tutorialhint
-```python
-def travelled_walk():
-    if blocks.test_for_block(GRASS, pos(0, 0, 0)):
-        pass
-    else:
-        pass
-player.on_travelled(WALK, travelled_walk)
+```spy
+player.onTravelled(WALK, function () {
+    if (blocks.testForBlock(GRASS, pos(0,0,0))) {
+
+    } else {
+
+    }
+})
 ```
 
 ##Step 7
 Change the first parameter in the 
-```python
+```
 blocks.testForBlock(GRASS, pos(0,0,0))
 ```
 to be ICE and the second parameter to be pos(0, -1, 0).
@@ -61,13 +63,14 @@ The pos(0, -1, 0) creates a relative coordinate which is the block under the pla
 
 This will result in the block below our players feet being checked to see if it is an ice block.
 #### ~ tutorialhint
-```python
-def travelled_walk():
-    if blocks.test_for_block(ICE, pos(0, -1, 0)):
-        pass
-    else:
-        pass
-player.on_travelled(WALK, travelled_walk)
+```spy
+player.onTravelled(WALK, function () {
+    if (blocks.testForBlock(ICE, pos(0,-1,0))) {
+
+    } else {
+
+    }
+})
 ```
 
 ##Step 8
@@ -75,25 +78,27 @@ Remove the default pass statement from the if section of the statement and from 
 
 This line of code will run when the block below the players feet is ice.
 #### ~ tutorialhint
-```python
-def travelled_walk():
-    if blocks.test_for_block(ICE, pos(0, -1, 0)):
+```spy
+player.onTravelled(WALK, function () {
+    if (blocks.testForBlock(ICE, pos(0,-1,0))) {
         player.say(":)")
-    else:
-        pass
-player.on_travelled(WALK, travelled_walk)
+    } else {
+
+    }
+})
 ```
 
 ##Step 9
 Change the text in the say function to Careful you do not slip on the ice! (ensure you keep the double quotes!)
 #### ~ tutorialhint
-```python
-def travelled_walk():
-    if blocks.test_for_block(ICE, pos(0, -1, 0)):
+```spy
+player.onTravelled(WALK, function () {
+    if (blocks.testForBlock(ICE, pos(0,-1,0))) {
         player.say("Careful you do not slip on the ice!")
-    else:
-        pass
-player.on_travelled(WALK, travelled_walk)
+    } else {
+
+    }
+})
 ```
 
 ##Step 10
@@ -103,13 +108,14 @@ This line of code will run when the block below the players feet is not ice.
 
 Change the text of the say command to Find some ice!
 #### ~ tutorialhint
-```python
-def travelled_walk():
-    if blocks.test_for_block(ICE, pos(0, -1, 0)):
+```spy
+player.onTravelled(WALK, function () {
+    if (blocks.testForBlock(ICE, pos(0,-1,0))) {
         player.say("Careful you do not slip on the ice!")
-    else:
+    } else {
         player.say("Find some ice!")
-player.on_travelled(WALK, travelled_walk)
+    }
+})
 ```
 ## Step 11
 Next lets test the code.
