--- a/Lesson6/6.3.2/6.3.2.md
+++ b/Lesson6/6.3.2/6.3.2.md
@@ -12,7 +12,7 @@ The code from the previous activity has been provided below.
 
 Firstly lets add a comment to describe the buildPen function.
 
-Add a new line before the ```python def buildPen(): ``` line of code and add a pound/hash symbol (```python #```) to start a comment
+Add a new line before the ` def buildPen(): ` line of code and add a pound/hash symbol (` # `) to start a comment
 ```template
 function buildPen() {
     blocks.fill(
@@ -48,38 +48,68 @@ player.onChat("build", function () {
 })
 ```
 #### ~ tutorialhint
-```python
-#
-def buildPen():
-    blocks.fill(OAK_FENCE,
-        pos(2, 0, 2),
-        positions.add(pos(2, 0, 2), pos(4, 0, 4)),
-        FillOperation.REPLACE)
-    blocks.fill(AIR,
-        positions.add(pos(2, 0, 2), pos(1, 0, 1)),
-        positions.add(pos(2, 0, 2), pos(3, 0, 3)),
-        FillOperation.REPLACE)
-    for index in range(randint(1, 7)):
+```spy
+//
+function buildPen() {
+    blocks.fill(
+    OAK_FENCE,
+    pos(2, 0, 2),
+    positions.add(
+    pos(2, 0, 2),
+    pos(4, 0, 4)
+    ),
+    FillOperation.Replace
+    )
+    blocks.fill(
+    AIR,
+    positions.add(
+    pos(2, 0, 2),
+    pos(1, 0, 1)
+    ),
+    positions.add(
+    pos(2, 0, 2),
+    pos(3, 0, 3)
+    ),
+    FillOperation.Replace
+    )
+    for (let index = 0; index < Math.randomRange(1, 7); index++) {
         mobs.spawn(CHICKEN, pos(3, 0, 3))
+    }
+}
 ```
 ## Step 3
 Enter the text comment: 
 Function which builds a 5 x 5 pen and spawns some chickens in it
 
 #### ~ tutorialhint
-```python
-# Function which builds a 5 x 5 pen and spawns some chickens in it
-def buildPen():
-    blocks.fill(OAK_FENCE,
-        pos(2, 0, 2),
-        positions.add(pos(2, 0, 2), pos(4, 0, 4)),
-        FillOperation.REPLACE)
-    blocks.fill(AIR,
-        positions.add(pos(2, 0, 2), pos(1, 0, 1)),
-        positions.add(pos(2, 0, 2), pos(3, 0, 3)),
-        FillOperation.REPLACE)
-    for index in range(randint(1, 7)):
+```spy
+// Function which builds a 5 x 5 pen and spawns some chickens in it
+function buildPen() {
+    blocks.fill(
+    OAK_FENCE,
+    pos(2, 0, 2),
+    positions.add(
+    pos(2, 0, 2),
+    pos(4, 0, 4)
+    ),
+    FillOperation.Replace
+    )
+    blocks.fill(
+    AIR,
+    positions.add(
+    pos(2, 0, 2),
+    pos(1, 0, 1)
+    ),
+    positions.add(
+    pos(2, 0, 2),
+    pos(3, 0, 3)
+    ),
+    FillOperation.Replace
+    )
+    for (let index = 0; index < Math.randomRange(1, 7); index++) {
         mobs.spawn(CHICKEN, pos(3, 0, 3))
+    }
+}
 ```
 
 ## Step 4 
@@ -91,10 +121,11 @@ Add the comment:
 Loop around between 1 and 7 times and spawn a chicken inside the pen each time
 
 #### ~ tutorialhint
-```python
-# Loop around between 1 and 7 times and spawn a chicken inside the pen each time
-    for index in range(randint(1, 7)):
+```spy
+// Loop around between 1 and 7 times and spawn a chicken inside the pen each time
+for (let index = 0; index < Math.randomRange(1, 7); index++) {
         mobs.spawn(CHICKEN, pos(3, 0, 3))
+}
 ```
 
 ## Step 5 @tutorialCompleted
