Update Lesson6/6.3.1/6.3.1.md, Lesson6/6.3.2/6.3.2.md, Lesson6/6.4.2/6.4.2.md

--- a/Lesson6/6.3.1/6.3.1.md
+++ b/Lesson6/6.3.1/6.3.1.md
@@ -56,11 +56,9 @@ The third option is the preferred option as it means there is only one copy of t
 
 ## Step 4 
 At the end of the code create a new function named buildPen by entering the below Python code:
-```spy
-function buildPen() {
 
-}
-```
+![alt text](https://advancedpython.codingcredentials.com/Lesson6/6.3.1/images/2.jpg?raw=true "Functions")
+
 This is known as defining a function.
 #### ~ tutorialhint
 ```spy
@@ -70,7 +68,7 @@ function buildPen() {
 ```
 
 ## Step 5
-Move all of the code from the player.onChat event handler to the buildPen function.
+Move all of the code from the onChat Build event handler to the buildPen function.
 #### ~ tutorialhint
 ```spy
 function buildPen() {
