--- a/Lesson6/6.3.2/6.3.2.md
+++ b/Lesson6/6.3.2/6.3.2.md
@@ -79,11 +79,11 @@ function buildPen() {
 ```
 ## Step 3
 Enter the text comment: 
-Function which builds a 5 x 5 pen and spawns some chickens in it
+Builds a 5 x 5 pen and spawns some chickens in it
 
 #### ~ tutorialhint
 ```spy
-// Function which builds a 5 x 5 pen and spawns some chickens in it
+// Builds a 5 x 5 pen and spawns some chickens in it
 function buildPen() {
     blocks.fill(
     OAK_FENCE,
