Update Lesson4/4.3.1/4.3.1.md, Lesson6/6.3.1/6.3.1.md, Lesson6/6.3.2/6.3.2.md, Lesson6/6.3/6.3.md, Lesson6/6.4.2/6.4.2.md

--- a/Lesson4/4.3.1/4.3.1.md
+++ b/Lesson4/4.3.1/4.3.1.md
@@ -110,17 +110,6 @@ player.onChat("farm", function () {
 Once the agent reaches the end of one of the lines of Grass blocks we need him to turn and move onto the adjacent set of grass blocks.
 
 Place the cursor at the end of the code on line 4 (after the `agent.move(FORWARD, 1)`) and press return to create a new line.
-#### ~ tutorialhint
-```spy
-player.onChat("farm", function () {
-    for (let index = 0; index < 2; index++) {
-        for(let i = 0; i < 11; i++) {
-            agent.move(FORWARD, 1)
-        } 
-
-    }   
-})
-```
 
 ##Step 11
 On this new blank line place the cursor in line with the second for loop to add some code that will run within the outer for loop and place an ``||AGENT: agent turn(TurnDirection.Left)||`` block from the ``||AGENT: AGENT||`` drawer.
@@ -152,15 +141,17 @@ From the ``||AGENT: AGENT||`` drawer place a ``||AGENT: agent teleport to pos fa
 This will teleport the Agent to our position and orientate it in a direction.
 #### ~ tutorialhint
 ```spy
-def on_chat():
+player.onChat("farm", function () {
     agent.teleport(pos(0,0,0), WEST)
-    for i in range(2):
-        for i in range(10):
+    for (let index = 0; index < 2; index++) {
+        for(let i = 0; i < 11; i++) {
             agent.move(FORWARD, 1)
-        agent.turn(TurnDirection.Left)    
-        agent.move(FORWARD, 1)
-        agent.turn(TurnDirection.Left)      
-player.on_chat("farm", on_chat)
+        } 
+        agent.turn(TurnDirection.Left) 
+        agent.move(FORWARD, 1)   
+        agent.turn(TurnDirection.Left)   	
+    }   
+})
 ```
 
 ##Step 12
@@ -174,7 +165,7 @@ The second paramter is the direction the Agent is to face - this is WEST by defa
 #### ~ tutorialhint
 ```spy
 player.onChat("farm", function () {
-    agent.teleport(pos(0,0,0), WEST)
+    agent.teleport(pos(0,0,0), EAST)
     for (let index = 0; index < 2; index++) {
         for(let i = 0; i < 11; i++) {
             agent.move(FORWARD, 1)
