--- a/Lesson6/6.3.1/6.3.1.md
+++ b/Lesson6/6.3.1/6.3.1.md
@@ -130,7 +130,7 @@ player.onChat("build", function () {
 ```
 
 ## Step 8
-Place these 2 lines of code within a for loop and change the loop to enumerate 3 times
+Place th 2 lines of code created in the previous step within a for loop and change the loop to enumerate 3 times
 #### ~ tutorialhint
 ```spy
 player.onChat("build", function () {
