--- a/Lesson6/6.3/6.3.md
+++ b/Lesson6/6.3/6.3.md
@@ -149,6 +149,37 @@ function buildLevel() {
 }
 ```
 
+```spy
+player.onChat("buildWall", function () {
+    //Teleport the Agent near the player
+    agent.teleport(pos(2,0,2), WEST)
+    //Give the Agent 64 bricks blocks in slot 1
+    agent.setItem(BRICKS, 64, 1)
+    //Set the Agents active slot to 1
+    agent.setSlot(1)
+    //Repeat process 6 times
+    for(let i = 0; i < 6; i++) {
+        //Call buildLevel function to build 1 level/storey
+        buildLevel()
+        //Reposition Agent on top of first block placed
+        agent.move(UP, 1)
+        agent.move(BACK, 10)
+    }
+
+})
+
+/*Function to build a single level 
+of a wall 10 blocks long*/
+function buildLevel() {
+    //Set the Agent to place blocks when they move
+    agent.setAssist(PLACE_ON_MOVE, true)
+    //Move Agent forward by 4 blocks
+    agent.move(FORWARD, 10)
+    //Set the Agent not to place blocks when they move
+    agent.setAssist(PLACE_ON_MOVE, false)
+}
+```
+
 ## Step 9 @unplugged
 **Code Attribution**
 Comments can also be used to give attribution to code which you have reused. 
