--- a/Lesson6/6.4.2/6.4.2.md
+++ b/Lesson6/6.4.2/6.4.2.md
@@ -27,7 +27,6 @@ In the below code there are 3 semantic errors.
 Can you identify them and provide a resolution to the errors?
 
 To submit your answer please complete the student worksheet linked to by the Non Player Character and submit to the student portal.
-
 ```template
 player.onChat("house", function () {
     agent.teleportToPlayer()
@@ -42,7 +41,21 @@ player.onChat("house", function () {
         agent.move(UP, 2)
     }
 })
-
+```
+```spy
+player.onChat("house", function () {
+    agent.teleportToPlayer()
+    agent.move(FORWARD, 1)
+    agent.setAssist(PLACE_ON_MOVE, false)
+    agent.setAssist(DESTROY_OBSTACLES, true)
+    for(let i = 0; i < 6; i++) {
+        for(let i = 0; i < 4; i++) {
+            agent.move(FORWARD, 4)
+            agent.turn(LEFT_TURN)
+        }
+        agent.move(UP, 2)
+    }
+})
 ```
 ## Step 3 @tutorialCompleted
 Return to the game and move onto the next Lesson!
