--- a/Lesson6/6.3.2/6.3.2.md
+++ b/Lesson6/6.3.2/6.3.2.md
@@ -7,6 +7,43 @@
 
 In this activity we will comment the code used in the previous activity to descibe what the code is doing so that others can easily undertand it and as a reminder if we ever need to look back at it.
 
+The code is detailed below but click the OK button to edit the code.
+
+```spy
+function buildPen() {
+    blocks.fill(
+    OAK_FENCE,
+    pos(2, 0, 2),
+    positions.add(
+    pos(2, 0, 2),
+    pos(4, 0, 4)
+    ),
+    FillOperation.Replace
+    )
+    blocks.fill(
+    AIR,
+    positions.add(
+    pos(2, 0, 2),
+    pos(1, 0, 1)
+    ),
+    positions.add(
+    pos(2, 0, 2),
+    pos(3, 0, 3)
+    ),
+    FillOperation.Replace
+    )
+    for (let index = 0; index < Math.randomRange(1, 7); index++) {
+        mobs.spawn(CHICKEN, pos(3, 0, 3))
+    }
+}
+player.onChat("build", function () {
+    for (let index = 0; index < 3; index++) {
+        buildPen()
+        player.teleport(pos(6, 0, 0))
+    }    
+})
+```
+
 ## Step 2
 The code from the previous activity has been provided below.
 
@@ -47,70 +84,10 @@ player.onChat("build", function () {
     }    
 })
 ```
-#### ~ tutorialhint
-```spy
-//
-function buildPen() {
-    blocks.fill(
-    OAK_FENCE,
-    pos(2, 0, 2),
-    positions.add(
-    pos(2, 0, 2),
-    pos(4, 0, 4)
-    ),
-    FillOperation.Replace
-    )
-    blocks.fill(
-    AIR,
-    positions.add(
-    pos(2, 0, 2),
-    pos(1, 0, 1)
-    ),
-    positions.add(
-    pos(2, 0, 2),
-    pos(3, 0, 3)
-    ),
-    FillOperation.Replace
-    )
-    for (let index = 0; index < Math.randomRange(1, 7); index++) {
-        mobs.spawn(CHICKEN, pos(3, 0, 3))
-    }
-}
-```
+
 ## Step 3
 Enter the text comment: 
 Builds a 5 x 5 pen and spawns some chickens in it
-
-#### ~ tutorialhint
-```spy
-// Builds a 5 x 5 pen and spawns some chickens in it
-function buildPen() {
-    blocks.fill(
-    OAK_FENCE,
-    pos(2, 0, 2),
-    positions.add(
-    pos(2, 0, 2),
-    pos(4, 0, 4)
-    ),
-    FillOperation.Replace
-    )
-    blocks.fill(
-    AIR,
-    positions.add(
-    pos(2, 0, 2),
-    pos(1, 0, 1)
-    ),
-    positions.add(
-    pos(2, 0, 2),
-    pos(3, 0, 3)
-    ),
-    FillOperation.Replace
-    )
-    for (let index = 0; index < Math.randomRange(1, 7); index++) {
-        mobs.spawn(CHICKEN, pos(3, 0, 3))
-    }
-}
-```
 
 ## Step 4 
 Next lets add some text comments to some of the lines of code to describe what they do.
